Upgraded dependencies and removed JUnit vintage